# Rust-Patchs-Templates

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  USAGE.md  demo.sh
examples/contexts/: api_handler.json  simple_struct.json
examples/output/: person.rs
examples/templates/: api_handler.tera  person_with_validation.tera  simple_struct.tera
src/: ast_parser.rs  cli.rs  diff.rs  generator.rs  main.rs  merger.rs  template.rs
