[package]
name = "rust-patchs-templates"
version = "0.1.0"
edition = "2021"
authors = ["Contributors"]
description = "Rust code generator with AST-based intelligent merging using Patch Theory"
readme = "README.md"
repository = "https://github.com/joanix2/Rust-Patchs-Templates"
license = "MIT"
keywords = ["codegen", "template", "ast", "patch", "merge"]
categories = ["development-tools", "template-engine"]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
prettyplease = "0.2"
tera = "1.19"
similar = { version = "2.3", features = ["inline"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
